--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -25,10 +26,12 @@
     "react-native": "0.73.6",
     "react-native-axios": "^0.17.1",
     "react-native-eject": "^0.2.0",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-get-location": "^4.0.1",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-location": "^2.5.0",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.0.3",
